feat: implement role enum system to user and auth